// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/shared/Timer.vue snapshots should render correct default contents 1`] = `
<div
  class="d-inline-block"
  title="Auto reload"
>
  <div
    class="v-input mt-0 pt-0 d-inline-block v-select--dense-append v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="list-3"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="true"
              autocomplete="off"
              id="input-3"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/shared/Timer.vue snapshots shows the selected setting 1`] = `
<div
  class="d-inline-block"
  title="Auto reload"
>
  <div
    class="v-input mt-0 pt-0 d-inline-block v-select--dense-append v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="list-11"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <small>
              5s
            </small>
            <input
              aria-readonly="true"
              autocomplete="off"
              id="input-11"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light"
              />
            </div>
          </div>
          <input
            type="hidden"
            value="5"
          />
        </div>
        <div
          class="v-menu"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
